<resources>
    <string name="app_name">Cinemates</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- my strings -->
    <string name="cast_and_crew"><![CDATA[Cast & crew]]></string>
    <string name="duration">Durata</string>
    <string name="genre">Genere</string>
    <string name="latest_releases">Ultime uscite</string>
    <string name="next">Prossimo</string>
    <string name="news">Novita\'</string>
    <string name="overview_not_avalaible_in_italian">(trama non disponibile in italiano)</string>
    <string name="plus">+</string>
    <string name="popular">Popolari</string>
    <string name="previous">Indietro</string>
    <string name="reviews">Recensioni</string>
    <string name="search_movies">Cerca film…</string>
    <string name="see_all">vedi tutto</string>
    <string name="status">Stato</string>
    <string name="title_activity_movie_details">Dettagli Film</string>
    <string name="title_activity_search">Cerca Film</string>
    <string name="add_to_list">Aggiungi ad una lista</string>
    <string name="done">Fatto</string>
    <string name="upcomings">Prossimamente</string>
    <string name="about">about</string>
    <string name="notifications">Notifiche</string>
    <string name="home">Home</string>
    <string name="movie">film</string>
    <string name="user">utente</string>
    <string name="director">regista</string>
    <string name="actor">attore</string>
    <string name="searc_with_ellipsis">Cerca…</string>
    <string name="search_movie_ellipsis">Cerca film…</string>
    <string name="search_actor_ellipsis">Cerca attore…</string>
    <string name="search_director_ellipsis">Cerca regista…</string>
    <string name="search_person_ellipsis">Cerca persona…</string>
    <string name="filter_by">Filtra per</string>
    <string name="titanic">titanic</string>
    <string name="search">Cerca</string>


    <!-- shared pref keys -->
    <string name="cinemates_shared_preferences">cinemates_shared_preferences</string>

    <string name="azure_base_url_key">azure_base_url</string>
    <string name="guest_token_key">guest_token</string>
    <string name="cinemates_app_signature_key">cinemates_app_signature</string>
    <string name="azure_base_url_default_value">https://cinemates.westeurope.cloudapp.azure.com/cinemates/rpc/</string>
    <string name="guest_token_default_value">-</string>
    <string name="cinemates_app_signature_default_value">-</string>
    <string name="password">Password</string>
    <string name="logout">logout</string>
    <string name="username">Username</string>
    <string name="firstname">Nome</string>
    <string name="lastname">Cognome</string>
    <string name="birthdate">Data di nascita</string>
    <string name="repeat_password">Ripeti password</string>
    <string name="passwords_dont_match">le password non combaciano</string>
    <string name="sign_up_page_terms_and_conditions">Accetta Termini e Condizioni.</string>
    <string name="user_profile">Profilo utente</string>
    <string name="sign_up">Registrazione</string>
    <string name="profile_page_resend_email">Rinvia email attivazione</string>
    <string name="user_profile_fragment_resend_message">Account ancora non attivato.\nNon hai ancora ricevuto l\'email di attivazione\n oppure e\' scaduta?</string>
    <string name="upload_profile_pciture">seleziona immagine profilo</string>
    <string name="watchlist">Watchlist</string>
    <string name="FavoriteList">Preferiti</string>
    <string name="remove">Rimuovi</string>
    <string name="select_all">Seleziona tutto</string>
    <string name="search_all">Cerca tutto</string>
    <string name="channel_name">cinemates_channel</string>
    <string name="channel_description">cinemates_notification_channel</string>
    <string name="msg_token_fmt">FCM token: </string>
    <string name="custom_list">lista custom</string>
    <string name="watched">visto</string>
    <string name="to_watch">da vedere</string>
    <string name="update">aggiorna</string>
    <string name="my_lists">Mie Liste</string>
    <string name="custom_lists">Liste Personalizzate</string>
    <string name="overview">trama</string>

</resources>