<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_searchFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_blue"
    android:paddingBottom="5dp"
    tools:context=".ui.search.SearchFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_searchFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="65dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText_searchFragment"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:autofillHints=""
        android:background="@drawable/shape_search_box"
        android:fontFamily="@font/poppins_semibold"
        android:hint="@string/searc_with_ellipsis"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/light_blue_2"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_search_searchFragment"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_search_searchFragment"
        android:layout_width="50dp"
        android:layout_height="55dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/yellow"
        android:paddingEnd="5dp"
        app:cornerRadius="50dp"
        app:icon="@drawable/search_icon_black"
        app:iconGravity="textStart"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/editText_searchFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_searchFragment" />

    <ToggleButton
        android:id="@+id/button_filter_searchFragment"
        style="@style/filterToggleStyle"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/filter_toggle_bg"
        app:layout_constraintBottom_toBottomOf="@+id/editText_searchFragment"
        app:layout_constraintEnd_toEndOf="@+id/editText_searchFragment"
        app:layout_constraintTop_toTopOf="@+id/editText_searchFragment"
        app:layout_constraintVertical_bias="0.52" />


    <View
        android:id="@+id/dummyView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/editText_searchFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_selected_filter"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/shape_search_filter"
        android:elevation="@dimen/default_elevation"
        android:fontFamily="@font/poppins_bold"
        android:paddingTop="1dp"
        android:paddingRight="7dp"
        android:text="regista"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:visibility="gone"
        app:icon="@drawable/clear_icon_black"
        app:iconGravity="end"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/editText_searchFragment"
        app:layout_constraintEnd_toStartOf="@+id/button_search_searchFragment" />

    <Button
        android:id="@+id/button_movie_filter"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/shape_search_filter"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/movie"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/editText_searchFragment"
        app:layout_constraintEnd_toEndOf="@+id/editText_searchFragment" />


    <Button
        android:id="@+id/button_actor_filter"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_search_filter"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/actor"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/button_movie_filter"
        app:layout_constraintEnd_toEndOf="@+id/button_movie_filter" />

    <Button
        android:id="@+id/button_director_filter"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_search_filter"
        android:fontFamily="@font/poppins_semibold"
        android:paddingBottom="1dp"
        android:text="@string/director"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/button_actor_filter"
        app:layout_constraintEnd_toEndOf="@+id/button_actor_filter" />

    <Button
        android:id="@+id/button_user_filter"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_search_filter"
        android:focusableInTouchMode="true"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/user"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/button_director_filter"
        app:layout_constraintEnd_toEndOf="@+id/button_director_filter"


        />

    <TextView
        android:id="@+id/textView_filterBy_searchFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/filter_by"
        android:textColor="@color/dark_blue"
        android:visibility="gone"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_searchFragment"
        app:layout_constraintEnd_toStartOf="@+id/button_filter_searchFragment" />

</androidx.constraintlayout.widget.ConstraintLayout>