<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_blue"
    tools:context=".ui.explore.ExploreFragment">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textview_explore_fragment_latest_releases"
                    android:layout_width="0dp"
                    android:layout_height="34dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_bold"
                    android:maxLines="3"
                    android:text="@string/latest_releases"
                    android:textColor="@color/white"
                    android:textSize="@dimen/header_newsPage"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/button_explore_fragment_view_all_latest"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button_explore_fragment_view_all_latest"
                    style="@style/outline_button_style"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/see_all"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textview_explore_fragment_latest_releases"
                    app:layout_constraintEnd_toEndOf="parent" />

                <fragment
                    android:id="@+id/fragment_explore_fragment_latest"
                    android:name="mirror42.dev.cinemates.ui.explore.LatestReleasesFragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textview_explore_fragment_latest_releases"
                    app:layout_constraintTop_toBottomOf="@+id/textview_explore_fragment_latest_releases"
                    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
                    tools:layout="@layout/fragment_latest_releases" />

                <TextView
                    android:id="@+id/textview_explore_fragment_latest_upcomings"
                    android:layout_width="0dp"
                    android:layout_height="34dp"
                    android:layout_marginTop="32dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_bold"
                    android:maxLines="3"
                    android:text="@string/upcomings"
                    android:textColor="@color/white"
                    android:textSize="@dimen/header_newsPage"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/fragment_explore_fragment_latest"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_explore_fragment_latest" />

                <Button
                    android:id="@+id/button_explore_fragment_view_all_upcomings"
                    style="@style/outline_button_style"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/see_all"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textview_explore_fragment_latest_upcomings"
                    app:layout_constraintEnd_toEndOf="parent" />

                <fragment
                    android:id="@+id/fragment_upcomings"
                    android:name="mirror42.dev.cinemates.ui.explore.UpcomginsFragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textview_explore_fragment_latest_upcomings"
                    app:layout_constraintTop_toBottomOf="@+id/textview_explore_fragment_latest_upcomings"
                    tools:layout="@layout/fragment_upcomgins" />

                <TextView
                    android:id="@+id/textview_explore_fragment_latest_popular"
                    android:layout_width="0dp"
                    android:layout_height="34dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/poppins_bold"
                    android:maxLines="3"
                    android:text="@string/popular"
                    android:textColor="@color/white"
                    android:textSize="@dimen/header_newsPage"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/button_explore_fragment_view_all_popular"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/fragment_upcomings"
                    app:layout_constraintTop_toBottomOf="@+id/fragment_upcomings" />

                <Button
                    android:id="@+id/button_explore_fragment_view_all_popular"
                    style="@style/outline_button_style"
                    android:layout_width="90dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/see_all"
                    app:layout_constraintBaseline_toBaselineOf="@+id/textview_explore_fragment_latest_popular"
                    app:layout_constraintEnd_toEndOf="parent" />

                <fragment
                    android:id="@+id/fragment_popular"
                    android:name="mirror42.dev.cinemates.ui.explore.PopularFragment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="32dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textview_explore_fragment_latest_popular"
                    app:layout_constraintTop_toBottomOf="@+id/textview_explore_fragment_latest_popular"
                    tools:layout="@layout/fragment_popular" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
</FrameLayout>